--- a/index.html
+++ b/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
-    <title>Test</title>
+    <title>Index</title>
 </head>
 
 <body>
+    <a href="">Home</a>
+    <a href="html/gallery.html">Gallery</a>
+
+    <br>
+
     <center>
-        <img height="250px"
-            src=https://scontent.fdad3-3.fna.fbcdn.net/v/t1.6435-9/p600x600/135891418_2557695361195107_204820391876852312_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=174925&_nc_ohc=RKE_UD7r2F0AX-VToOz&_nc_ht=scontent.fdad3-3.fna&oh=bb5ed8c4525aa94d86e83ed928da41fc&oe=61BF1464>
+        <a>
+            <img height="200px"
+            src="https://scontent.fdad3-3.fna.fbcdn.net/v/t1.6435-9/p600x600/135891418_2557695361195107_204820391876852312_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=174925&_nc_ohc=nX1cEctI8ckAX9rV1TG&_nc_ht=scontent.fdad3-3.fna&oh=2a6cbed95dae80f7cb2e5cd33708fdc1&oe=61CAF1E4">
+           
+        </a>
     </center>
 
     <h1>
-         INFORMASION
+        Cù Duy Lộc
     </h1>
 
-    <br><br><br><br><br>
-
-    <p><u>Cù Duy Lộc.</u></p>
 
     <br>
 
-    <p><em>sở thích </em><strong>cá nhân</strong>:</p>
+
+
+    <br>
+
+    <p>
+        <em>sở thích </em> <strong><u>cá nhân</u></strong>:
+    </p>
 
     <ul>
-        <li>bơi lôi.</li>
-        <li>bóng đá.</li>
+        <li>bơi lội.</li>
+        <li>bóng chuyền.</li>
     </ul>
 
-    <br>
-
     <ol>
-        <li>cầu lông.</li>
-        <li>bóng chuyền.</li>
+        <li>cầu long.</li>
+        <li>đá bóng.</li>
     </ol>
 </body>
 
